Add content to html file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,56 @@
     <link rel="stylesheet" href="styles.css">
 </head> 
 <body>
-    
+    <div class="header">
+        <h1>Header Logo</h1>
+        <ul>
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
+    </div>
+    <div class="main">
+        <div class="title">
+            <h1>This website is awesome!</h1>
+            <p>This website has some subtext that goes here under the main title.</p>
+            <button>Sign up</button>
+        </div>
+        <div class="image-placeholder">
+            This is a placeholder for an image
+        </div>
+    </div>
+    <div class="information">
+        <h2>Some random information</h2>
+        <div class="information-images">
+            <div class="one">
+                <div class="image-one"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="two">
+                <div class="image-two"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="three">
+                <div class="image-three"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="four">
+                <div class="image-four"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
+    <div class="qoute">
+        <div class="content">"All great things take time... Remember Rome wasn't built in a day"</div>
+        <div class="author">- I dont know who the author is tbh</div>
+    </div>
+    <div class="sign-up">
+        <p>Call to action! It's time!</p>
+        <p>Sign up to our product by clicking that button over there</p>
+        <button>Sign up</button>
+    </div>
+    <div class="footer">
+        <p>copyright &copy The Odin Project 2023</p>
+    </div>
 </body>
 </html>
